--- a/binder/build.gradle
+++ b/binder/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
-apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 30
@@ -37,6 +37,7 @@ android {
         }
     }
 }
+
 afterEvaluate {
     publishing {
         publications {
