--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -2,6 +2,21 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 
+group = 'com.github.zero615'
+version = '2.0.0'
+
+java {
+	withSourcesJar()
+	withJavadocJar()
+}
+publishing {
+    publications {
+        maven(MavenPublication) {
+		from components.java
+        }
+    }
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
